manifests/9-logscale-ingress/humiocluster-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: humiocluster-ui-ingress
  namespace: logging           
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-2:452968854315:certificate/8e42d6be-486b-4e33-9356-86a0734a9a96"
    alb.ingress.kubernetes.io/healthcheck-path: "/api/v1/status/"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "10"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTPS"
    alb.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/hostname: db1.netbuildertraining.com
    external-dns.alpha.kubernetes.io/alias: "true"
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  defaultBackend:
    service:
      name: humiocluster-nodeport-ui 
      port:
        number: 8080
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: humiocluster-nodeport-ui  
                port:
                  number: 8080
